fix(Dropdown): give Dropdown button transparent background addresses live pulse background color clipping

--- a/src/styles/HMBKSettings.scss
+++ b/src/styles/HMBKSettings.scss
@@ -230,7 +230,7 @@ figcaption {
 
 .unstyled {
   border-style: none;
-  background-color: black;
+  background-color: transparent;
   cursor: pointer;
 }
 
